tests/integration/per_document_grammar/validation/_views/02_view_references_nonexisting_field/test.itest
RUN: %expect_exit 1 %strictdoc export %S --output-dir Output/ | filecheck %s --dump-input=fail

CHECK: error: could not parse file: {{.*}}input.sdoc.
CHECK: Semantic error: View element 'FIELD_VIEW' references a nonexisting field 'NONEXISTING_FIELD' for grammar element 'REQUIREMENT'.
CHECK: Location: {{.*}}input.sdoc:6:1
CHECK: Hint: Make sure each View element you create references an existing field in the grammar for the given grammar element.
CHECK: error: Parallelizer: One of the child processes has exited prematurely.
